WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175111
Crash in garbage collection, creating a document fragment on a background thread
https://bugs.webkit.org/show_bug.cgi?id=175111
Summary
Crash in garbage collection, creating a document fragment on a background thread
Sam Weinig
Reported
2017-08-02 19:47:46 PDT
Fix crashes in GC creating a document fragment on a background thread
Attachments
Patch
(2.92 KB, patch)
2017-08-02 19:54 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2017-08-02 19:54:27 PDT
Created
attachment 317069
[details]
Patch
Sam Weinig
Comment 2
2017-08-02 19:55:35 PDT
This regressed in
r220095
(for bug
https://webkit.org/b/175006
).
WebKit Commit Bot
Comment 3
2017-08-02 20:49:57 PDT
Comment on
attachment 317069
[details]
Patch Clearing flags on attachment: 317069 Committed
r220177
: <
http://trac.webkit.org/changeset/220177
>
WebKit Commit Bot
Comment 4
2017-08-02 20:49:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-08-02 20:51:29 PDT
<
rdar://problem/33692758
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug